# ajazz-deck

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  attach.ps1  buttons.example.yaml  buttons.yaml  cli.py  config_models.py  deck.py  image_engine.py  mcp_server.py  pyproject.toml  raw_hid.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  semgrep.yml
install/udev/: 99-ajazz-ak820.rules  ajazz-deck-stop.service  ajazz-deck.service  install.sh
install/wsl/: README-WSL.md  attach-device.ps1
research/hid-protocol/: README.md  probe.py
