[project]
name = "ajazz-deck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "hid>=1.0.9",
    "loguru>=0.7.3",
    "pillow>=12.1.1",
    "pyudev>=0.24.4",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.scripts]
ajazz = "cli:cli"
